--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 Week1/*.exe
 */*.exe
 
+Week2/build/Debug/outDebug.exe
+Week2/build/Debug/InsertionInArray.o
+.vscode/launch.json
+.vscode/launch.json
