--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ Week2/build/Debug/outDebug.exe
 Week2/build/Debug/InsertionInArray.o
 .vscode/launch.json
 .vscode/launch.json
+Week2/Binary search/BinarySearch.exe
+Week2/BinarySearch.c
+Week2/BinarySearch.c
+Week2/MissingPositiveInteger.c
+W2_Practice/PracticeMergeSort.c
+Week2/Binary search/IterativeBS.exe
+Week2/BinarySearch.c
+Week2/Binary search/RecursiveBS.exe
+*/*.exe
+
