--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ Week2/BinarySearch.c
 Week2/Binary search/RecursiveBS.exe
 */*.exe
 
+Week2/Binary search/MoveZeroesToLast.exe
+Week2/Binary search/ImplementLowerBound.exe
