--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ Week2/Binary search/RecursiveBS.exe
 
 Week2/Binary search/MoveZeroesToLast.exe
 Week2/Binary search/ImplementLowerBound.exe
+Week2/ArrayIntro.exe
+Week2/ArrayIntro.exe
