--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ Week2/Binary search/RecursiveBS.exe
 Week2/Binary search/MoveZeroesToLast.exe
 Week2/Binary search/ImplementLowerBound.exe
 Week2/ArrayIntro.exe
+Week2/Binary search/ImplementUpperBound.exe
