--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ Week2/Binary search/MoveZeroesToLast.exe
 Week2/Binary search/ImplementLowerBound.exe
 Week2/ArrayIntro.exe
 Week2/Binary search/ImplementUpperBound.exe
+Week2/*.exe
