--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ Week2/Binary search/ImplementLowerBound.exe
 Week2/ArrayIntro.exe
 Week2/Binary search/ImplementUpperBound.exe
 Week2/*.exe
+*/*.exe
