counting length without using library functions.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Week2/Binary search/ImplementUpperBound.exe
 Week2/*.exe
 */*.exe
 Week2/*.exe
+Week2/STRINGS/LengthWithoutLibraryFunc.exe
+Week2/*.exe
