--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ Week2/*.exe
 Week2/STRINGS/LengthWithoutLibraryFunc.exe
 Week2/*.exe
 Week2/STRINGS/CountLengthOfString.exe
+Week2/STRINGS/ReverseLettersInString.exe
