--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ Week2/STRINGS/LengthWithoutLibraryFunc.exe
 Week2/*.exe
 Week2/STRINGS/CountLengthOfString.exe
 Week2/STRINGS/ReverseLettersInString.exe
+.vscode/tasks.json
