--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ Week2/*.exe
 Week2/STRINGS/CountLengthOfString.exe
 Week2/STRINGS/ReverseLettersInString.exe
 .vscode/tasks.json
+Week4/14_Oct.c
+Week4/14_Oct.c
